--- a/style.css
+++ b/style.css
@@ -55,9 +55,27 @@ header{
     font-size: 19px;
     text-decoration: none;
     list-style: none;
-    margin-right: 35px;
+    margin-right: 5px;
     font-family: 'gilroy','sans-serif';
+    position: relative;
+}
+
+.nav-link.bottom::before{
+    content: "";
+    background-color: #fe6e6e;
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform-origin: center;
+    transform: scaleX(0);
+    transition: all 0.3s;
     
+}
+
+.nav-link.bottom:hover::before{
+    transform: scaleX(1);
 }
 
 .ca{
